--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,4 +1,4 @@
-CROSS_COMPILE=aarch64-none-linux-gnu-
+#CROSS_COMPILE=aarch64-none-linux-gnu-
 export PATH=$PATH:/home/dave/Downloads/arm-gnu-toolchain-13.3.rel1-x86_64-aarch64-none-linux-gnu/bin
 
 #default target builds the writer
